Изменения в документации
