# docs/swagger.json
@@ -44,7 +44,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entities.ChatroomDTO"
+                            "$ref": "#/definitions/entities.CreateChatroom"
                         }
                     }
                 ],
@@ -91,7 +91,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entities.ChatroomDTO"
+                            "$ref": "#/definitions/entities.CreateChatroom"
                         }
                     }
                 ],
@@ -326,7 +326,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entities.UserDTO"
+                            "$ref": "#/definitions/entities.User"
                         }
                     }
                 ],
@@ -365,15 +365,6 @@
                         "name": "Authorization",
                         "in": "header",
                         "required": true
-                    },
-                    {
-                        "description": "User Data",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/entities.UserDTO"
-                        }
                     }
                 ],
                 "responses": {
@@ -511,7 +502,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entities.UserDTO"
+                            "$ref": "#/definitions/entities.User"
                         }
                     }
                 ],
@@ -519,7 +510,7 @@
                     "201": {
                         "description": "User created successfully",
                         "schema": {
-                            "$ref": "#/definitions/entities.Response"
+                            "$ref": "#/definitions/entities.TokenResponse"
                         }
                     },
                     "400": {
@@ -557,7 +548,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entities.UserDTO"
+                            "$ref": "#/definitions/entities.UpdateEmail"
                         }
                     }
                 ],
@@ -649,7 +640,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entities.UserDTO"
+                            "$ref": "#/definitions/entities.UpdateUsername"
                         }
                     }
                 ],
@@ -669,7 +660,7 @@
                 }
             }
         },
-        "/{GUID}/{cid}": {
+        "/ws/{GUID}/{cid}": {
             "get": {
                 "description": "Обновляет соединение до WebSocket'а для передачи сообщений.",
                 "tags": [
@@ -710,12 +701,9 @@
         }
     },
     "definitions": {
-        "entities.ChatroomDTO": {
+        "entities.CreateChatroom": {
             "type": "object",
             "properties": {
-                "chatroom_id": {
-                    "type": "string"
-                },
                 "guid": {
                     "type": "string"
                 },
@@ -724,9 +712,6 @@
                 },
                 "name": {
                     "type": "string"
-                },
-                "participants_limit": {
-                    "type": "integer"
                 }
             }
         },
@@ -735,6 +720,36 @@
             "properties": {
                 "content": {},
                 "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "entities.TokenResponse": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "object",
+                    "properties": {
+                        "Token": {
+                            "type": "string"
+                        },
+                        "UserGuid": {
+                            "type": "string"
+                        }
+                    }
+                },
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "entities.UpdateEmail": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "guid": {
                     "type": "string"
                 }
             }
@@ -753,15 +768,20 @@
                 }
             }
         },
-        "entities.UserDTO": {
+        "entities.UpdateUsername": {
             "type": "object",
             "properties": {
-                "email": {
-                    "type": "string"
-                },
                 "guid": {
                     "type": "string"
                 },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "entities.User": {
+            "type": "object",
+            "properties": {
                 "password": {
                     "type": "string"
                 },
